# vcpkg-qtbase-dnslookup

./: CMakeLists.txt  main.cpp  vcpkg.json
